
          <adapter factory="zope.app.security.LogoutSupported" />

        to your site.zcml or overrides.zcml. The burden is now on the site
        admin to configure a site so that the 'logout' function is supported.
        (The default authentication scheme, HTTP basic auth, does not support
        logout.) See zope/app/security/browser/loginlogout.txt for details.

    Bug Fixes
    
      - Fix #327 : File type change clears object content

      - Disabled automatic translation of message id's in TAL.

      - Fixed tal:replace="default" bug.

      - Fixed issue #380: Local Utility don't get correct removed

      - Fixed issue #369: DAV is broken on the trunk.

      - Fixed issue #407: zope.app.publication.http.MethodNotAllowed.__str__:
        'request' should be self.request

      - Fixed issue #333: XML Tree doesn't load if some item
        contains non-ASCII characters 

      - Fixed issue #301: Bug with i18n:name and i18n:translate
        on the same element

      - The interface directive supports multiple interface types now.

      - Fixed issue #314: i18n:translate removes line breaks
        from <pre>...</pre> contents

      - The getAdapters function on site managers returned None when
        adapter factories returned None. These values should not be
        included in the output and now aren't.

      - Fixed issue #394: starting zope with command -C arg
        causes request.form to contain '-C':''

      - Fixed issue #387: apidoc and Cookie

      - Fixed issue #334: Failing RuntimeInfo tests

      - Fix: Pagelet directive was inoring the permission. Pagelets which
        not the right permission are not shwon if calling via the Tales
        expression "pagelets:". If calling named pagelets directly via the
        Tales expression "pagelet:" we raise a Unauthorized exception if
        the permission ins't right.

      - Fix: Register the zmi_actions on the right layer if the layer attribute