@@ -590,6 +590,8 @@ Zope Changes
         logout.) See zope/app/security/browser/loginlogout.txt for details.
 
     Bug Fixes
+
+      - Fix #313 : importchecker.py ignores assignment to module attributes
     
       - Fix #327 : File type change clears object content
 
